[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyjabber"
version = "0.0.1"
description = "A Python XMPP server."
readme = "README.rst"
authors = [
  {name = "Aarón Raya", email = "aaron.raya.lopez@gmail.com"}
]
maintainers = [
  {name = "Aarón Raya", email = "aaron.raya.lopez@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/dinothor/pyjabber/issues"
changelog = "https://github.com/dinothor/pyjabber/blob/master/changelog.md"
homepage = "https://github.com/dinothor/pyjabber"

[tool.setuptools]
package-dir = {"" = "pyjabber"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

