[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "pyjabber"
version = "0.4.0"
description = "A lightweight, modular and asyncio XMPP/Jabber server written in Python."
readme = "README.rst"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Aaron Raya Lopez", email = "aaron.raya.lopez@gmail.com"}]
maintainers = [{name = "Aaron Raya Lopez", email = "aaron.raya.lopez@gmail.com"}]
keywords=[
    "xmpp", "jabber", "server", "asyncio",
    "python", "chat", "messaging",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: XMPP",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.11",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.1",
    "bcrypt>=5.0.0",
    "click>=8.1.8",
    "cryptography>=46.0.4",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "uvloop>=0.21.0; sys_platform != 'win32'",
    "winloop>=0.5.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "slixmpp>=1.8.6", # Útil para tests de integración XMPP
]
dev = [
    "black>=24.4.2",
    "ruff",
    "tox>=4.16.0",
    "build>=1.2.1",
    "twine>=5.1.1",
    "wheel>=0.43.0",
    "bump2version>=1.0.1",
]
docs = [
    "sphinx>=7.1.2",
    "furo>=2024.8.6",
    "sphinx-autodoc-typehints>=2.0.1",
    "sphinx-wagtail-theme>=6.3.0",
]

[project.urls]
"Documentation"="https://pyjabber.readthedocs.io/"
"Homepage"="https://github.com/DinoThor/PyJabber"
"Bug Tracker"="https://github.com/DinoThor/PyJabber/issues"

[project.scripts]
pyjabber = "pyjabber.__main__:main"

[tool.setuptools.package-data]
pyjabber = [
    "db/*.sql",
    "config/config.yaml",
    "network/certs/*.pem",
    "webpage/build/**/*",
    "../alembic_local/**/*"
]
alembic = [
    "env.py",
    "__init__.py",
    "versions/*.py"
]
"*" = [
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
    "README.rst",
    "alembic.ini"
]

[tool.setuptools.exclude-package-data]
"*" = [
    "__pycache__",
    "*.py[co]"
]
test = ["*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyjabber*"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312, ruff
isolated_build = True

[testenv]
runner = uv-venv
extras = test
commands = pytest --cov=pyjabber test/

[testenv:ruff]
runner = uv-venv
deps = ruff
commands = ruff check pyjabber
"""

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
norecursedirs = [".git", "s2s", "e2e", "webpage", "alembic_local"]
testpaths = ["test"]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    ".tox",
    "build",
    "dist",
    "webpage",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
